/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.Edi.Requests";

message WholesaleServicesRequest {
  string requested_by_actor_id = 1; // GLN or EIC for the requesting party. This is the party that receives the settlement request.
  string requested_by_actor_role = 2; //The kind of market roles that can be played by parties for given domains within the electricity market. Eg. GridOperator, EnergySupplier etc.
  string business_reason = 3; // The requested business reason for the settlement request. eg. WholesaleFixing or Correction.
  string resolution = 6; // Is this used for determining if they are requesting monthly sums (Monthly) or amount pr. charge (Daily)
  string period_start = 7; // The start of the requested period.
  optional string period_end = 8; // The end of the requested period.
  optional string energy_supplier_id = 9; // GLN or EIC for the energy supplier on the charge.
  optional string charge_owner_id = 10; // GLN or EIC for the party that owns the charge.
  optional string grid_area_code = 11; // The code for the grid area. eg. 870.
  optional string settlement_series_version = 13; // Is the version of the requested settlement series. eg. First, Second or Third.
  repeated ChargeType charge_type = 14; // Can you create a request without specifying a charge type?
}

message ChargeType {
  optional string charge_type = 1; // The type of charge. eg. Tariff, Subscription, Fee.
  optional string charge_id = 2; // The unique identifier for the charge in the context of the charge-owner?.
}
